--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "blog-template"
+  title: "Wellness Meets Data"
   navbar:
     right:
       - about.qmd
@@ -11,7 +11,7 @@ website:
         href: https://github.com/praj0022
 format:
   html:
-    theme: cosmo
+    theme: cosmos
     css: styles.css
 
 
